# EnhanceKeys

./: .gitignore  INSTALLATION.md  README.md  create_icons.py  create_rgba_icons.py  create_simple_icons.py  enhancekeys  index.html  package-lock.json  package.json  vite.config.ts
config/: default_snippets.toml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  hotkeys.rs  main.rs  system_integration.rs  text_injection.rs
src/components/: Button.tsx  ButtonGrid.tsx  SettingsPanel.tsx
src/hooks/: useConfig.ts
src/styles/: index.css
