[package]
name = "enhancekeys"
version = "0.0.0"
description = "A native prompt enhancement application"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[[bin]]
name = "enhancekeys"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
enigo = "0.2"
global-hotkey = "0.6"
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
dirs = "5.0"

[features]
default = []